<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Epicopter</string>
    <string name="settings">Paramètres</string>
    <string name="app_id_facebook">1606058759621757</string>
    <string name="app_id_google_maps">AIzaSyCliFGRCw_GHHgrMc6VXq6m9UJDhmTtnlI</string>
    <string name="error_no_internet_connection">Aucune connexion internet disponible!</string>
    <string name="download_your_data" tools:ignore="TypographyEllipsis">Chargement de vos données...</string>
    <string name="validate">Valider</string>
    <string name="password">Mot de passe</string>
    <string name="email">Email</string>
    <string name="login">Connexion</string>
    <string name="Inscription">Inscription</string>
    <string name="forgot_password">Mot de passe oublié?</string>
    <string name="inscription_page">Page d\'inscription</string>
    <string name="forgot_password_page">Mot de passe oublié</string>
    <string name="send">Envoyer</string>
    <string name="waiting" tools:ignore="TypographyEllipsis">Veuillez patienter...</string>
    <string name="my_trips">Mes parcours</string>
    <string name="resume">Reprendre</string>
    <string name="new_">Nouveau</string>
    <string name="latitude">latitude : </string>
    <string name="longitude">longitude : </string>
    <string name="height">Hauteur : </string>
    <string name="trip_name">Nom du parcours</string>
    <string name="historic">Historique</string>
    <string name="delete">Supprimer</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="save">Sauvegarder</string>
    <string name="save_and_send">Sauvegarder et envoyer</string>
    <string name="logo">Logo</string>
    <string name="logout">Déconnexion</string>
    <string name="take_picture">Prendre des photos</string>
    <string name="take_video">Prendre une vidéo</string>
    <string name="number_of_repetition">Nombre de répétition :</string>
    <string name="date_and_time_trip">Date et heure du parcours :</string>
    <string name="immediatly">Immédiat</string>
    <string name="or">ou</string>
    <string name="date_and_time">Date et heure</string>

</resources>