<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/welcomeValiderEditTextTripName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:gravity="center"
        android:hint="@string/trip_name"
        android:textSize="25sp" />

    <Button
        android:id="@+id/welcomeValiderButtonSend"
        style="@style/button_text"
        android:layout_below="@+id/welcomeValiderEditTextTripName"
        android:background="@drawable/blue_button"
        android:text="@string/send" />

    <Button
        android:id="@+id/welcomeValiderButtonSave"
        style="@style/button_text"
        android:layout_below="@+id/welcomeValiderButtonSend"
        android:background="@drawable/blue_button"
        android:text="@string/save" />

    <Button
        android:id="@+id/welcomeValiderButtonSaveAndSend"
        style="@style/button_text"
        android:layout_below="@+id/welcomeValiderButtonSave"
        android:background="@drawable/blue_button"
        android:text="@string/save_and_send" />

</RelativeLayout>