<?xml version="1.0" encoding="utf-8"?>
<!-- the parent view - provides the gray listfragment background color -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/frame_background"
    android:gravity="center_vertical"
    android:padding="5dp" >

    <!-- the innner view - provides the white rectangle -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frames" >

        <!-- the icon view -->

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:contentDescription="description de l\&apos;icone"
            android:padding="5dp"
            android:scaleType="fitXY" />
        <!-- the container view for the title and description -->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/ivIcon" >

            <!-- the title view -->

            <TextView
                android:id="@+id/tvLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textAppearance="@android:style/TextAppearance.Medium" />
            <!-- the description view -->

            <TextView
                android:id="@+id/tvLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLatitude"
                android:text="@string/longitude"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/tvHeightUseless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLongitude"
                android:text="@string/height"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHeightUseless"
                android:layout_centerHorizontal="true"
                android:descendantFocusability="blocksDescendants"
                android:weightSum="10" >

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-" />

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <Button
                    android:id="@+id/btnPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+" />

            </TableRow>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>